# weibo-spider

./: README.md  config.json  dowloader.py  downloader.py  main.py  pyproject.toml  weibo.py
tests/: test_weibo_spider.py
weibo_spider/: cli.py
weibo_spider/downloader/: __init__.py  download_album.py  get_album_dict.py  get_uid.py  get_username.py  parse_config.py
