[tool.poetry]
name = "weibo-spider"
version = "0.1.0"
description = ""
authors = ["quantulr <35954003+quantulr@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
weibo-spider = "weibo_spider.cli:main"